# MonoClaw

./: .gitignore  ACTIVITY-HUB-CHANGES.md  ACTIVITY-HUB-COMPLETE.md  ACTIVITY-HUB-OVERHAUL-REPORT.md  ACTIVITY_TRACKER_PLUGIN_PLAN.md  AGENTS.md  AUTO-START-GUIDE.md  COMMAND-HUB-CACHE.md  DAY3-PLAN.md  DEPLOYMENT-SUMMARY.md  DOCKER-QUICKSTART.md  FINAL-SETUP-COMPLETE.md  GIT_WORKFLOW.md  IDENTITY.md  IMPORTANT-DOCKER-SETUP.md  MEMORY.md  MONOCLAW_SETUP.md  ORA_AI_COMPLETION_SUMMARY.md  ORIENTATION.md  PHASE-2-COMPLETE.md  PLUGIN_LAUNCH_SUMMARY.md  PORT-MAP.md  PROJECT-SUMMARY.md  PUBLICATION_STATUS.md  QUICK_PUBLISH.sh  README.md  REVAMP-REPORT.md  ROLLBACK.md  SERVICE-DEBUG-REPORT.md  SERVICES-STATUS.md  SQLITE-SERVICES-AUDIT-REPORT.md  SYSTEM_AUDIT_DETAILED_2026-02-09.md  TAILSCALE-ACCESS-MATRIX.md  TAILSCALE-MOBILE-SETUP.md  TAILSCALE-SETUP-COMPLETE.md  TODO.md  TOOLS.md  USER.md  activity-debug-test.txt  activity-hub-overhaul.js  (+49 more)
PayMe/apps/api/: Dockerfile  alembic.ini  pyproject.toml
PayMe/apps/api/alembic/: env.py
PayMe/apps/api/alembic/versions/: 0001_initial.py  0002_add_plaid_transactions.py  0003_user_sync_and_match_timestamps.py  0004_claim_feedback.py  0005_ml_feedback_samples.py  0006_gmail_oauth_tokens.py  0007_plaid_items.py  0008_autofill_tables.py  0009_gateway_payout_tables.py  0010_user_roles.py  0011_managed_settlements.py  0012_plaid_balance.py
PayMe/apps/api/app/: __init__.py  main.py
PayMe/apps/api/app/core/: auth.py  crypto.py  db.py  logging.py  security.py  (+1 more)
PayMe/apps/api/payme_lite_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+881 files in other folders)
